# ebpf.party

./: .gitignore  .gitmodules  Makefile  README.md  verifier-provenance.patch
backend/: Cargo.toml  build.sh  config.toml
backend/includes/: .gitignore  ep_platform.h  ep_sock.h  kfuncs.h  sched.h  syscalls.h  task.h
backend/includes/bpf/: bpf_helper_defs.h  bpf_tracing.h
backend/src/: btf.rs  compile.rs  config.rs  diag.rs  dwarf.rs  guest_message.rs  lib.rs  main.rs  metrics.rs  types.rs  vm_pool.rs
backend/tests/: diag_golden.rs  dwarf_test.rs
backend/tests/data/diag/: 01_unchecked.bpf.c  01_unchecked.golden  01_unchecked.rendered  02_offbyone.bpf.c  02_offbyone.golden  02_offbyone.rendered  03_nonull.bpf.c  03_nonull.golden  03_nonull.rendered  04_helper_size.bpf.c  04_helper_size.golden  04_helper_size.rendered  05_loop.bpf.c  05_loop.golden  05_loop.rendered  06_subprog.bpf.c  06_subprog.golden  06_subprog.rendered  07_stackvar.bpf.c  07_stackvar.golden  07_stackvar.rendered  08_u32idx.bpf.c  08_u32idx.golden  08_u32idx.rendered  09_globalfn.bpf.c  09_globalfn.golden  09_globalfn.rendered  10_ctx.bpf.c  10_ctx.rendered  13_stackwrite.bpf.c  13_stackwrite.golden  13_stackwrite.rendered  14_zerosize.bpf.c  14_zerosize.golden  14_zerosize.rendered  15_nullarg.bpf.c  15_nullarg.golden  15_nullarg.rendered  16_multiprog.bpf.c  16_multiprog.golden  (+21 more)
bins/: exit_with_code.c
shared/: Cargo.toml
shared/src/: lib.rs
userspace/: Cargo.toml  build.sh
userspace/src/: ebpf.rs  exercises.rs  main.rs  setup.rs
userspace/src/setup/: loopback.rs
website/: astro.config.mjs  package.json  pnpm-lock.yaml
website/public/exercises-code/: 1_ambient_intro.c  2_event_data.c  ex1.c
website/public/tcc/: .gitignore
website/src/components/: App.module.css  App.tsx  CharPtrPtr.module.css  CharPtrPtr.tsx  CodeEditor.astro  CodeEditor.tsx  CodeEditorWithViewer.module.css  CodeEditorWithViewer.tsx  CompilerOutput.tsx  ControlButton.module.css  ControlButton.tsx  CrossSyscallMaps.tsx  EventViewer.module.css  EventViewer.tsx  ExecveArgs.module.css  ExecveArgs.tsx  ExerciseList.module.css  ExerciseList.tsx  ExerciseNav.module.css  ExerciseNav.tsx  FuncDoc.module.css  FuncDoc.tsx  InteractiveEditor.astro  MarkCompleted.tsx  ParsedEventViewer.module.css  ParsedEventViewer.tsx  QuickReference.module.css  QuickReference.tsx  RunButton.module.css  RunButton.tsx  StructSelector.module.css  StructSelector.tsx  StructViewer.module.css  StructViewer.tsx  VerifierDiagnosticView.tsx
website/src/content/: NoScript.mdx  config.ts
website/src/layouts/: ContentLayout.astro  ExerciseLayout.astro  Layout.astro
website/src/lib/: api-client.ts  deb-type-registry.ts  exercises-metadata.ts  struct-parser.test.ts  (+3 more)
(+63 files in other folders)
